# lang-mrj

./: .glottologid.txt  AUTHORS  CITATION.cff  Links.jspwiki  Links.md  Makefile.am  Makefile.in  README  README.markdown  README.md  WesternMariDocumentation.jspwiki  WhatIsThis.jspwiki  _config.yml  adjectives-affixes-fst-src.md  adjectives-affixes.jspwiki  adjectives-affixes.md  adjectives_newwords-stems-fst-src.md  adverbs-affixes-fst-src.md  autogen.sh  clitics-affixes-fst-src.md  clitics-affixes.md  configure.ac  disambiguator-cg3-src.md  exceptions-stems-fst-src.md  exceptions-stems.md  functions-cg3-src.md  giella-mrj.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  lemmacount.json  manifest.toml  manifest.toml.in  metadata.json  mrj.jspwiki  mrj.md  nouns-affixes-fst-src.md  nouns-affixes.md  nouns_newwords-stems-fst-src.md  nouns_newwords-stems.md  (+68 more)
.gut/: delta.toml  manifest.toml
am-shared/: src_oahpa-include.am
corp/: Kivi-Aleksis_Seitseman-veljesta_HillMari-Alikov_2005Frequency2011-10-11.txt  mrjwiki.txt
devtools/: adj_minip.sh  noun_minip.sh  test_ospell-office_suggestions.sh  test_voikkospell_suggestions.sh  verb_minip.sh
doc/: Links.jspwiki  Makefile.am  WesternMariDocumentation.jspwiki  WhatIsThis.jspwiki  adjectives-affixes.jspwiki  clitics-affixes.jspwiki  index.xml  link-header.jspwiki  mrj-phon-phonology.jspwiki  mrj.jspwiki  nouns-affixes.jspwiki  phonology-morphology.jspwiki  preamble.jspwiki  pronouns-affixes.jspwiki  propernouns-affixes.jspwiki  root-morphology.jspwiki  verbs-affixes.jspwiki
docs/: Links.md  mrj.md  (+19 more)
(+288 files in other folders)
